<resources>
    <string name="app_name">魏家凉皮</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="winning_numbers_board">开奖信息</string>
    <string name="winning_numbers_list">%1$s开奖信息</string>
    <string name="winning_numbers_issue_name">第%1$s期</string>
    <string name="winning_numbers_issue_sum_title">和值：</string>
    <string name="winning_numbers_issue_sum">和值：%1$s</string>
    <string name="award_time">开奖日期：</string>
    <string name="end_time">投注截止：</string>
    <string name="award_pool">奖池滚存：</string>
    <string name="my_lottery">我的彩票</string>
    <string name="announced_winning_lottery">开奖公告</string>
    <string name="more_lottery">更多彩种敬请期待</string>
    <string name="double_color_rules">双色球玩法规则</string>
    <string name="da_le_tou_rules">大乐透玩法规则</string>
    <string name="prev_issue_peroid">第%1$s期开奖号码：</string>
    <string name="main_page_award_time">开奖日期第%1$s</string>
    <string name="basic_bet_info">您已选择了%1$d注，共%2$d元</string>
    <string name="curr_issue_peroid">第%1$s期</string>
    <string name="time_counter">距截止还剩：%1$d天%2$02d:%3$02d:%4$02d</string>
    <string name="main_page_time_counter">%1$d天%2$02d:%3$02d:%4$02d</string>
    <string name="time_counter_default">等待新开期...</string>
    <string name="time_set_error">时间设置有误</string>
    <string name="to_json">To JSON</string>
    <string name="cart">号码篮</string>
    <string name="add_to_cart">加入号码篮</string>
    <string name="bet">投注</string>
    <string name="bet_list">投注列表</string>
    <string name="close">Close</string>
    <string name="left_banner">left banner</string>
    <string name="zhu">注</string>
    <string name="yuan">元</string>
    <string name="zhixuan">直选</string>
    <string name="danshi">单式</string>
    <string name="fushi">复式</string>
    <string name="dantuo">胆拖</string>
    <string name="lottery_betting_way_standard">标准投注</string>
    <string name="lottery_betting_way_fushi">复式投注</string>
    <string name="lottery_betting_way_dantuo">胆拖投注</string>
    <string name="zhixuan_danshi">直选单式</string>
    <string name="zhixuan_fushi">直选复式</string>
    <string name="zu3_danshi">组三单式</string>
    <string name="zu6_danshi">组六单式</string>
    <string name="zu3_fushi">组三复式</string>
    <string name="zu6_fushi">组六复式</string>
    <string name="zu3">组三</string>
    <string name="zu6">组六</string>
    <string name="add_shouxuan">添加手选号码</string>
    <string name="add_random">添加一注机选</string>
    <string name="lianmai">连买：</string>
    <string name="qi">期</string>
    <string name="beishu">倍数：</string>
    <string name="bei">倍</string>
    <string name="stop_zhuihao">中奖后停止追号</string>
    <string name="total_money">总金额：</string>
    <string name="total_money_formater">￥%1$d元</string>
    <string name="total_term_formater">%1$d注%2$d期%3$d倍</string>
    <string name="money_symbol">￥</string>
    <string name="confirm">确认投注</string>
    <string name="confirm_order">确认投注信息</string>
    <string name="payment_method">支付方式</string>
    <string name="pay_way">支付方式：</string>
    <string name="pay_pwd">支付密码：</string>
    <string name="more_payment_method">更多支付方式</string>
    <string name="forget_pay_pwd_reminder">如果您忘记支付密码，请点击找回密码。</string>
    <string name="retrieve_pay_pwd">找回密码</string>
    <string name="lottery_arrgement_link_text">我已经阅读并同意了《<font fgcolor="#ff1e92b6">客户端购彩协议</font>》</string>
    <string name="click_select_shake_numbers">摇一摇机选</string>
    <string name="random">机选</string>
    <string name="optional">自选</string>
    <string name="duplex">胆拖</string>
    <string name="omission">遗漏</string>
    <string name="alert_dialog_btton_text_completion">补全号码</string>
    <string name="alert_dialog_btton_text_bet">直接投注</string>
    <string name="select_random_ball_num">请选择随机球的数量</string>
    <string name="add_to_basket_success">成功加入号码篮</string>
    <string name="rule_error_ssq_optional_null">请至少选择6个红球1个蓝球</string>
    <string name="rule_error_dlt_optional_null">请至少选择5个前区号码2个后区号码</string>
    <string name="shake_random_select_num">%1$d注</string>
    <string name="shake_random_clean_panel_title">警告</string>
    <string name="shake_random_clean_panel_message">"选号区已有选中号码，
您确定要重新选择吗？"</string>
    <string name="ssq_red_panel_title"><font fgcolor="#ffff0000">红球区</font>（至少选择6个球）</string>
    <string name="ssq_blue_panel_title"><font fgcolor="#ff1e92b6">蓝球区</font>（至少选择1个球)</string>
    <string name="ssq_dantuo_dan_panel_title">胆码区（我认为必出的号码可选1~5个球）</string>
    <string name="ssq_dantuo_tuo_panel_title">拖码区（我认为可能出的号码 至少选择2个球）</string>
    <string name="ssq_dantuo_blue_panel_title">蓝球区（至少选择1个球）</string>
    <string name="dlt_red_panel_title"><font fgcolor="#ffff0000">前区</font>（至少选择5个球）</string>
    <string name="dlt_blue_panel_title"><font fgcolor="#ff1e92b6">后区</font>（至少选择2个球)</string>
    <string name="dlt_dantuo_qian_dan_panel_title"><font fgcolor="#ffff0000">前胆码区</font>（我认为必出的号码可选1~4个球）</string>
    <string name="dlt_dantuo_qian_tuo_panel_title"><font fgcolor="#ffff0000">前拖码区</font>（我认为可能出的号码 至少选择2个球）</string>
    <string name="dlt_dantuo_hou_dan_panel_title"><font fgcolor="#ff1e92b6">后胆码区</font>（我认为必出的号码可最多选择1个球）</string>
    <string name="dlt_dantuo_hou_tuo_panel_title"><font fgcolor="#ff1e92b6">后拖码区</font>（我认为可能出的号码至少选择2个球）</string>
    <string name="qxc_panel_0_title">第一位</string>
    <string name="qxc_panel_1_title">第二位</string>
    <string name="qxc_panel_2_title">第三位</string>
    <string name="qxc_panel_3_title">第四位</string>
    <string name="qxc_panel_4_title">第五位</string>
    <string name="qxc_panel_5_title">第六位</string>
    <string name="qxc_panel_6_title">第七位</string>
    <string name="pailie5_panel_0_title">第一位</string>
    <string name="pailie5_panel_1_title">第二位</string>
    <string name="pailie5_panel_2_title">第三位</string>
    <string name="pailie5_panel_3_title">第四位</string>
    <string name="pailie5_panel_4_title">第五位</string>
    <string name="pailie3_panel_0_title">百位</string>
    <string name="pailie3_panel_1_title">十位</string>
    <string name="pailie3_panel_2_title">个位</string>
    <string name="pailie3_zu3_0_title">重号</string>
    <string name="pailie3_zu3_1_title">单号</string>
    <string name="pailie3_zu3_2_title">选号</string>
    <string name="pailie3_zu6_0_title">选号</string>
    <string name="pailie3_panel_description">所选号码与开奖号码一致，且顺序相同，即中奖金1000元</string>
    <string name="pailie3_zu3_description">所选号码与开奖号码一致，顺序不限，其中开奖号码有任意两位相同，即中奖金320元</string>
    <string name="pailie3_zu6_description">所选号码与开奖号码一致，顺序不限，即中奖金160元</string>
    <string name="pailie5_panel_description">所选号码与开奖号码一致，且顺序相同，即中奖金10万元</string>
    <string name="kuai3_remarks_AAA">三同号</string>
    <string name="kuai3_remarks_AAB">二同号</string>
    <string name="kuai3_remarks_ABC">三连号</string>
    <string name="kuai3_remarks_ABD">三不同</string>
    <string name="new_shishi_remarks_da">大</string>
    <string name="new_shishi_remarks_xiao">小</string>
    <string name="new_shishi_remarks_dan">单</string>
    <string name="new_shishi_remarks_shuang">双</string>
    <string name="red_ball">红球</string>
    <string name="blue_ball">蓝球</string>
    <string name="qianqu">前区</string>
    <string name="houqu">后区</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="confirm_order_personal_info_title">投注者身份信息</string>
    <string name="modify_personal_info">修改身份信息</string>
    <string name="real_name">真实姓名：</string>
    <string name="identity_card">身份证号：</string>
    <string name="mobile">手机号码：</string>
    <string name="no_info_message">为了确保您在中奖后顺利领奖，请输入您正确的身份信息</string>
    <string name="toast_not_exceed_2w">总投注金额不能超过20000元!</string>
    <string name="toast_ssq_optional_redball">红球投注数为6～16个</string>
    <string name="toast_ssq_optional_at_least_6_redball">至少选择6个红球</string>
    <string name="toast_ssq_optional_not_execced_16_redball">最多选择16个红球!</string>
    <string name="toast_ssq_optional_at_least_1_blueball">至少选择1个蓝球！</string>
    <string name="toast_ssq_duplex_not_execced_20_danma_plus_tuoma">红球胆码加拖码不能多于20个！</string>
    <string name="toast_ssq_duplex_at_least_1_danma">至少选择1个胆码</string>
    <string name="toast_ssq_duplex_not_execced_5_danma">至多选择5个红球胆码!</string>
    <string name="toast_ssq_duplex_at_least_2_tuoma">至少选择2个拖码！</string>
    <string name="toast_daletou_optional_not_execced_16_redball">至多选择16个前区号码!</string>
    <string name="toast_daletou_duplex_not_execced_4_qiandanma">至多选择4个前区胆码！</string>
    <string name="toast_daletou_duplex_not_execced_1_houdanma">至多选择1个后区胆码！</string>
    <string name="toast_confirm_order_no_pwd">请输入支付密码！</string>
    <string name="toast_confirm_order_imperfect_personal_info">投注者身份信息为空，请补充后再提交订单！</string>
    <string name="toast_coupon_not_select">请选择要使用的优惠券！</string>
    <string name="toast_coupon_selected_isnot_enough">优惠券面额不足，请选择更多优惠券！</string>
    <string name="toast_basket_is_empty">投注列表为空，无法投注！</string>
    <string name="toast_fullname_is_empty">姓名不能为空！</string>
    <string name="toast_fullname_is_error">请输入真实姓名！</string>
    <string name="toast_idcard_is_empty">身份证号不能为空！</string>
    <string name="toast_idcard_is_error">请输入正确身份证号码</string>
    <string name="toast_idcard_isnot_older_than_18">身份证错误：未满18周岁！</string>
    <string name="toast_mobile_is_empty">手机号码不能为空！</string>
    <string name="toast_mobile_is_error">请输入正确手机号码！</string>
    <string name="toast_coupon_is_enough">已选优惠券总金额足以支付，不需要此张优惠券！</string>
    <string name="toast_aggrement_unchecked">您尚未勾选客户端购彩协议！</string>
    <string name="toast_lottery_max_number_of_periods">最大期数为%1$d期！</string>
    <string name="toast_lottery_max_multiple">最大倍数为%1$d倍！</string>
    <string name="toast_get_personal_info_fail">网络访问异常，请返回上个页面重试！</string>
    <string name="toast_edit_personal_info_success">修改成功！</string>
    <string name="toast_procerss_error">系统繁忙！</string>
    <string name="toast_term_error">追号错误，请稍后重试！</string>
    <string name="toast_load_omission_error">获取遗漏值失败,请稍候重试！</string>
    <string name="toast_load_rpc_payment_entity">读取是否开通支付密码失败,请稍候重试！</string>
    <string name="toast_refresh_error">刷新失败,请稍候重试!</string>
    <string name="toast_refresh_no_data">未获取到数据,请稍候重试!</string>
    <string name="toast_confirm_order_beyond_deadline">等待新开期，请稍候投注！</string>
    <string name="alert_dialog_title_warning">警告</string>
    <string name="alert_dialog_msg_clean_basket">您确定要清空所有已选号码吗？</string>
    <string name="dialog_clear_lottery_title">提示</string>
    <string name="dialog_clear_lottery_content">返回购彩大厅将清空所有已选号码!</string>
    <string name="dialog_legal_lottery">"已选号码不能凑成一注，
确定要放弃已选号码直接投注？"</string>
    <string name="dialog_payment_total_moaney">应付总价：￥%1$.2f元</string>
    <string name="dialog_payment_online">在线支付</string>
    <string name="dialog_payment_balance">余额支付(可用余额%1$.2f元)</string>
    <string name="dialog_payment_balance_unavailable">当前余额不足，无法购买</string>
    <string name="dialog_payment_points">京豆支付(可用京豆%1$d)</string>
    <string name="order_success">订单提交成功！</string>
    <string name="order_success_description">我们将尽快为您安排出票！</string>
    <string name="order_number">订单号：</string>
    <string name="order_money">支付金额：</string>
    <string name="order_pay_type">支付方式：</string>
    <string name="continue_buy">继续购买</string>
    <string name="order_detail">订单详情</string>
    <string name="goto_main">飞奔去首页</string>
    <string name="pay_complete_title">订单成功</string>
    <string name="upomp_bypay_editpass">修改密码</string>
    <string name="user_name">账户名：</string>
    <string name="user_password">密    码：</string>
    <string name="register">注册</string>
    <string name="register_confirm_password">确认密码：</string>
    <string name="show_password">显示密码</string>
    <string name="accept_agreement">同意，</string>
    <string name="show_agreement"><u>注册协议</u></string>
    <string name="order_history_status">订单状态:</string>
    <string name="order_history_optime">操作时间:</string>
    <string name="order_history_comment">备        注:</string>
    <string name="username_hint">请输入12字符以内的字母和数字</string>
    <string name="password_hint">请输入16字符以内的字母、数字或者符号</string>
</resources>