<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/order_list_item" android:background="@drawable/android_my_order_item_bg" android:focusable="true" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0dip" android:id="@id/order_history_optime_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/order_history_optime" android:layout_alignParentTop="true" />
    <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:id="@id/order_history_optime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_toRightOf="@id/order_history_optime_hint" android:layout_alignParentTop="true" />
    <TextView android:textSize="12.0dip" android:id="@id/order_history_status_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/order_history_status" android:layout_toLeftOf="@id/index_icon1" android:layout_below="@id/order_history_optime" />
    <TextView android:textSize="12.0dip" android:textColor="@color/font_red" android:id="@id/order_history_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/index_icon1" android:layout_toRightOf="@id/order_history_status_hint" android:layout_below="@id/order_history_optime" />
    <TextView android:textSize="12.0dip" android:id="@id/order_history_comment_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="11.0dip" android:text="@string/order_history_comment" android:layout_below="@id/order_history_status" />
    <TextView android:textSize="12.0dip" android:id="@id/order_history_comment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="11.0dip" android:text="false" android:layout_toRightOf="@id/order_history_comment_hint" android:layout_below="@id/order_history_status" />
    <View android:id="@id/line_up" android:saveEnabled="false" android:layout_below="@id/order_item_subtime" style="@style/line1" />
</RelativeLayout>