<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/common_title" layout="@layout/title" style="@style/title_include"/>
    <ScrollView android:id="@id/regist_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/common_title">

        <RelativeLayout
            android:id="@id/register_relative"
            android:layout_width="fill_parent"
            android:layout_height="456dp"
            android:padding="5.0dip" >

            <RelativeLayout
                android:id="@id/register_editor_layout"
                android:layout_width="fill_parent"
                android:layout_height="143.0dip"
                android:layout_below="@id/register_user_icon"
                android:layout_marginLeft="13.299988dip"
                android:layout_marginRight="13.299988dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/login_editor_layout_bg" >

                <RelativeLayout
                    android:id="@id/register_page_input_name_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="47.0dip"
                    android:layout_alignParentTop="true" >

                    <TextView
                        android:id="@id/register_page_input_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/user_name"
                        android:textSize="17.0sp" />

                    <EditText
                        android:id="@id/register_input_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5.0dip"
                        android:layout_toRightOf="@id/register_page_input_name"
                        android:background="@color/white"
                        android:singleLine="true"                         
                        android:hint="@string/username_hint"
                        android:maxLength="12"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
                </RelativeLayout>

                <View
                    android:id="@id/register_divider_line1"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_below="@id/register_page_input_name_layout"
                    android:background="#ffbfbfbf" />

                <RelativeLayout
                    android:id="@id/register_page_input_password_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="47.0dip"
                    android:layout_below="@id/register_divider_line1" >

                    <TextView
                        android:id="@id/register_page_input_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/user_password"
                        android:textSize="17.0sp" />

                    <EditText
                        android:id="@id/register_input_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/register_page_input_password"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:singleLine="true" 
                        android:hint="@string/password_hint"
                        android:maxLength="16"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~`!@#$%^*-_()+={[}]|\:;',.?"/>
                </RelativeLayout>

                <View
                    android:id="@id/register_divider_line2"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_below="@id/register_page_input_password_layout"
                    android:background="#ffbfbfbf" />

                <RelativeLayout
                    android:id="@id/register_page_confirm_input_password_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="47.0dip"
                    android:layout_below="@id/register_divider_line2" >

                    <TextView
                        android:id="@id/register_page_confirm_input_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/register_confirm_password"
                        android:textSize="17.0sp" />

                    <EditText
                        android:id="@id/register_input_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/register_page_confirm_input_password"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:singleLine="true" 
                        
                        android:hint="@string/password_hint"
                        android:maxLength="16"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~`!@#$%^*-_()+={[}]|\:;',.?"/>
                </RelativeLayout>
            </RelativeLayout>

            <ImageView
                android:id="@id/register_user_icon"
                android:layout_width="75.0dip"
                android:layout_height="75.0dip"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_user_icon_bg"
                android:padding="3.0dip"
                android:src="@drawable/login_user_default_icon" />

            <CheckBox
                android:id="@id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/register_editor_layout"
                android:layout_below="@id/register_editor_layout"
                android:layout_marginTop="10.0dip"
                android:button="@drawable/login_remember"
                android:text="@string/show_password" />

            <Button
                android:id="@id/register_top"
                style="@style/common_button"
                android:layout_width="150.0dip"
                android:layout_below="@id/show_password"
                android:layout_centerInParent="true"
                android:layout_marginTop="10.0dip"
                android:adjustViewBounds="true"
                android:text="@string/upomp_bypay_editpass"
                android:textSize="20.0sp" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>